--- a/pendeloque.html
+++ b/pendeloque.html
@@ -86,7 +86,7 @@ les vestiges gallo-romains du site.
 </p>
 
 <div class="figure">
-<img src="images/pendeloque/pendeloque-lavret.jpg" alt="Pendeloque anthropomorphe en os, île Lavret, longueur 44 mm">
+<img src="images/accueil/pendeloque-lavret.jpg" alt="Pendeloque anthropomorphe de l’île Lavret">
 <div class="figure-caption">
 Fig. 1 — Pendeloque anthropomorphe en os de l’île Lavret (longueur réelle : 44 mm).
 </div>
@@ -112,7 +112,7 @@ a été intégrée à la figuration.
 </p>
 
 <div class="figure">
-<img src="images/pendeloque/pendeloque-comparaison.jpg" alt="Comparaison entre la pendeloque de Lavret et des pendeloques cylindriques bavaroises">
+<img src="images/accueil/pendeloque-comparaison.jpg" alt="Comparaison pendeloques Lavret et Darstadt">
 <div class="figure-caption">
 Fig. 2 — Comparaison entre la pendeloque de Lavret (1)
 et des exemplaires cylindriques de Darstadt en Bavière (2 et 3).
