--- a/lavret.html
+++ b/lavret.html
@@ -351,7 +351,11 @@ main{
   </p>
 
   <p>
-    Parmi les objets découverts figure une <img src="images/accueil/pendeloque-schema.jpg" alt="Schéma pendeloque Lavret">retrouvée en contexte funéraire.
+    Parmi les objets découverts figure une <a href="pendeloque.html">
+<img src="...">
+pendeloque
+</a>
+    retrouvée en contexte funéraire.
     Son style et sa typologie ont intrigué Giot :
     elle paraît davantage relever d’un horizon culturel franc que strictement armoricain.
     Sa présence sur une île bretonne du haut Moyen Âge suggère des circulations d’hommes,
