--- a/pendeloque.html
+++ b/pendeloque.html
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
+
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-<meta name="description" content="La pendeloque anthropomorphe en os de l’île Lavret (VIe–VIIe siècle) étudiée par Pierre-Roland Giot.">
+<meta name="description" content="La pendeloque anthropomorphe de l’île Lavret — étude archéologique d’après Pierre-Roland Giot.">
 <link rel="canonical" href="https://azenor.org/pendeloque.html">
+
+<meta property="og:locale" content="fr_FR">
+<meta property="og:type" content="article">
+<meta property="og:title" content="La pendeloque de l’île Lavret | Le Testament d’Azénor">
+<meta property="og:description" content="La pendeloque anthropomorphe en os découverte sur l’île Lavret.">
+<meta property="og:url" content="https://azenor.org/pendeloque.html">
+<meta property="og:site_name" content="Le Testament d’Azénor">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="La pendeloque de l’île Lavret">
+<meta name="twitter:description" content="Étude archéologique de la pendeloque anthropomorphe de Lavret.">
 
 <title>La pendeloque de l’île Lavret | Le Testament d’Azénor</title>
 
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp;family=Inter:wght@300;400;500&amp;display=swap" rel="stylesheet"/>
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
 
 <style>
 .lieu-wrapper{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 16px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 16px;
 }
 
 .lieu-title{
-  text-align:center;
-  color:#f28c28;
-  font-family:'Libre Baskerville', serif;
-  font-size:2.2rem;
-  margin:2.5rem 0 2rem;
+  text-align: center;
+  color: #f28c28;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 2.2rem;
+  margin: 2.5rem 0 2rem;
 }
 
-.content-wrapper{
-  max-width:900px;
-  margin:3rem auto;
-  line-height:1.75;
-  font-size:1.05rem;
+.map-full{
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
 }
-
-.figure{
-  margin:2.5rem 0;
-  text-align:center;
-}
-
-.figure img{
-  max-width:100%;
-  height:auto;
-}
-
-.figure-caption{
-  font-size:0.9rem;
-  color:#777;
-  margin-top:0.8rem;
+.map-full img{
+  width: 100%;
+  height: auto;
+  display: block;
 }
 </style>
 </head>
@@ -64,7 +63,11 @@
 <div class="nav-menu">
 <a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
 <a href="personnages.html">les<span>personnages</span></a>
+<a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
+<a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
 <a href="bibliographie.html">bibliographie</a>
+<a href="making-off.html">making of</a>
+<a href="contact.html">contact</a>
 </div>
 </nav>
 </header>
@@ -73,106 +76,71 @@
 
 <div class="lieu-wrapper">
 <h1 class="lieu-title">La pendeloque anthropomorphe de l’île Lavret</h1>
-</div>
 
-<div class="content-wrapper">
-
-<p>
-Découverte lors des fouilles dirigées par Pierre-Roland Giot sur l’île Lavret,
-la pendeloque anthropomorphe en os constitue l’un des objets les plus singuliers
-mis au jour dans le contexte du très haut Moyen Âge armoricain.
-Elle provient d’un niveau associé aux fosses d’occupation réutilisant
-les vestiges gallo-romains du site.
-</p>
-
-<div class="figure">
-<img src="images/accueil/pendeloque-lavret.jpg" alt="Pendeloque anthropomorphe de l’île Lavret">
-<div class="figure-caption">
-Fig. 1 — Pendeloque anthropomorphe en os de l’île Lavret (longueur réelle : 44 mm).
+<div class="map-full">
+<img src="images/accueil/pendeloque-lavret.jpg"
+     alt="Pendeloque anthropomorphe en os découverte à l’île Lavret (44 mm)">
 </div>
 </div>
 
-<h2>Un objet en deux temps</h2>
+<section style="max-width:900px;margin:3rem auto;line-height:1.7;font-size:1.05rem;">
 
 <p>
-L’analyse détaillée publiée par Giot montre que l’objet a connu
-au moins deux phases de fabrication.
-Dans un premier temps, il s’agissait vraisemblablement
-d’une pendeloque géométrique proche des amulettes cylindriques
-du domaine mérovingien germanique.
+Découverte dans les niveaux du très haut Moyen Âge lors des fouilles dirigées par Pierre-Roland Giot,
+la pendeloque anthropomorphe en os de l’île Lavret constitue un objet exceptionnel
+dans le contexte armoricain.
+</p>
+
+<h2>Un objet en deux stades</h2>
+
+<p>
+L’étude publiée en 1984 montre que l’objet a connu au moins deux phases de fabrication.
+À l’origine, il s’agissait probablement d’une pendeloque géométrique,
+proche des amulettes cylindriques mérovingiennes du domaine germanique.
 </p>
 
 <p>
-Dans un second temps, l’objet a été transformé :
-un travail au couteau a anthropomorphisé la forme initiale.
-Front et nez sont réservés en relief,
-la bouche est incisée,
-et la partie conique supérieure — percée d’un trou de suspension —
-a été intégrée à la figuration.
+Dans un second temps, l’objet fut anthropomorphisé :
+le visage est dégagé par enlèvements au couteau,
+le nez laissé en réserve,
+la bouche incisée,
+la partie supérieure conique percée d’un trou de suspension.
 </p>
 
-<div class="figure">
-<img src="images/accueil/pendeloque-comparaison.jpg" alt="Comparaison pendeloques Lavret et Darstadt">
-<div class="figure-caption">
-Fig. 2 — Comparaison entre la pendeloque de Lavret (1)
-et des exemplaires cylindriques de Darstadt en Bavière (2 et 3).
+<div class="map-full" style="margin-top:2rem;">
+<img src="images/accueil/pendeloque-comparaison.jpg"
+     alt="Comparaison entre la pendeloque de Lavret et des pendeloques cylindriques de Darstadt">
 </div>
-</div>
 
-<h2>Une origine culturelle ouverte</h2>
+<h2>Ouverture culturelle</h2>
 
 <p>
-Les prototypes comparables recensés par J. Werner
-se rencontrent principalement dans des contextes
-germaniques des VIe–VIIe siècles
-(Mecklembourg, vallée du Rhin, Bavière).
-Ils sont le plus souvent associés à des sépultures féminines ou infantiles.
+Les comparaisons établies avec des exemplaires de Darstadt,
+de la vallée du Rhin ou de Bavière (VIe–VIIe siècles)
+suggèrent une diffusion par voie maritime plutôt qu’une importation directe.
 </p>
 
 <p>
-La pendeloque de Lavret, bien que plate et non cylindrique,
-présente une parenté morphologique forte avec ces modèles.
-Giot souligne toutefois que l’assimilation n’est pas évidente :
-il pourrait s’agir non d’une importation directe,
-mais de la diffusion d’un type ou d’une idée,
-transmise probablement par voie maritime.
+Cet objet singulier rappelle combien la Bretagne littorale,
+au sein du royaume de Domnonée,
+était ouverte aux influences venues du monde franc
+et insérée dans des réseaux d’échanges à large échelle.
 </p>
 
-<p>
-L’objet témoigne ainsi de l’ouverture du royaume de Domnonée
-aux influences venues de la vallée du Rhin et du monde franc.
-Il rappelle que la Bretagne littorale du VIIe siècle
-n’était pas isolée,
-mais insérée dans des réseaux d’échanges à grande échelle.
-</p>
+</section>
 
-<h2>Anthropomorphisation et christianisation</h2>
-
-<p>
-La transformation figurative pourrait traduire
-une appropriation locale.
-Giot évoque l’hypothèse d’une forme de christianisation de l’objet.
-Plutôt qu’un enfant emmailloté,
-la représentation pourrait renvoyer à un adulte,
-voire à une figure religieuse.
-</p>
-
-<p>
-Qu’il s’agisse d’un capuchon, d’un casque stylisé
-ou d’un symbole plus abstrait,
-la pendeloque illustre la complexité culturelle
-du très haut Moyen Âge armoricain :
-héritages antiques,
-influences franques,
-circulations maritimes,
-et recompositions symboliques.
-</p>
-
-</div>
 </main>
 
 <footer class="site-footer">
 <div class="footer-inner">
+<div class="footer-left">
+<button class="like-btn">❤</button>
+<div class="social-icons">
+<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank" title="LinkedIn"></a>
+<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank" title="X"></a>
+<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank" title="Facebook"></a>
+</div>
+</div>
 <div class="footer-right">
 <a class="buy-btn" href="achat.html">Acheter le livre</a>
 </div>
