--- a/pendeloque.html
+++ b/pendeloque.html
@@ -7,52 +7,61 @@
 
 <meta name="description" content="La pendeloque anthropomorphe de l’île Lavret — étude archéologique d’après Pierre-Roland Giot.">
 <link rel="canonical" href="https://azenor.org/pendeloque.html">
-
 <meta property="og:locale" content="fr_FR">
 <meta property="og:type" content="article">
-<meta property="og:title" content="La pendeloque de l’île Lavret | Le Testament d’Azénor">
+<meta property="og:title" content="La pendeloque anthropomorphe de l’île Lavret | Le Testament d’Azénor">
 <meta property="og:description" content="La pendeloque anthropomorphe en os découverte sur l’île Lavret.">
 <meta property="og:url" content="https://azenor.org/pendeloque.html">
 <meta property="og:site_name" content="Le Testament d’Azénor">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="La pendeloque de l’île Lavret">
-<meta name="twitter:description" content="Étude archéologique de la pendeloque anthropomorphe de Lavret.">
+<meta name="twitter:title" content="La pendeloque anthropomorphe de l’île Lavret">
+<meta name="twitter:description" content="Étude archéologique de la pendeloque de Lavret.">
 
-<title>La pendeloque de l’île Lavret | Le Testament d’Azénor</title>
+<title>La pendeloque anthropomorphe de l’île Lavret | Le Testament d’Azénor</title>
 
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp;family=Inter:wght@300;400;500&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp&family=Inter:wght@300&400&500&amp&display=swap" rel="stylesheet"/>
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
 
 <style>
-.lieu-wrapper{
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 16px;
-}
+    .lieu-wrapper{
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 16px;
+    }
 
-.lieu-title{
-  text-align: center;
-  color: #f28c28;
-  font-family: 'Libre Baskerville', serif;
-  font-size: 2.2rem;
-  margin: 2.5rem 0 2rem;
-}
+    .lieu-title{
+      text-align: center;
+      color: #f28c28;
+      font-family: 'Libre Baskerville', serif;
+      font-size: 2.2rem;
+      margin: 2.5rem 0 2rem;
+    }
 
-.map-full{
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
-}
-.map-full img{
-  width: 100%;
-  height: auto;
-  display: block;
-}
+    .map-full{
+      width: 100%;
+      height: auto;
+      margin: 0 auto;
+    }
+    .map-full img{
+      width: 100%;
+      height: auto;
+      display: block;
+    }
 </style>
-</head>
 
+<!-- TOUS TES BLOCS FOOTER CSS REPRIS À L’IDENTIQUE -->
+<style>
+.site-footer{background:#000;margin-top:4rem;padding:1.5rem 0;}
+.site-footer .footer-inner{max-width:1200px;margin:0 auto;padding:0 1.5rem;display:flex;justify-content:space-between;align-items:center;}
+.footer-left{display:flex;align-items:center;gap:1rem;}
+.like-btn{background:none;border:1px solid #f28c28;color:#f28c28;padding:0.4rem 0.8rem;cursor:pointer;}
+.social-icons a{color:#f28c28;font-size:1.1rem;text-decoration:none;margin-right:0.6rem;}
+.footer-right .buy-btn{background:#f28c28;color:#000;padding:0.6rem 1.2rem;text-decoration:none;font-weight:500;}
+</style>
+
+</head>
 <body>
 
 <header class="site-header">
@@ -78,53 +87,42 @@
 <h1 class="lieu-title">La pendeloque anthropomorphe de l’île Lavret</h1>
 
 <div class="map-full">
-<img src="images/accueil/pendeloque-lavret.jpg"
-     alt="Pendeloque anthropomorphe en os découverte à l’île Lavret (44 mm)">
+<img alt="Pendeloque anthropomorphe de l’île Lavret"
+     src="images/accueil/pendeloque-lavret.jpg"/>
 </div>
 </div>
 
 <section style="max-width:900px;margin:3rem auto;line-height:1.7;font-size:1.05rem;">
 
 <p>
-Découverte dans les niveaux du très haut Moyen Âge lors des fouilles dirigées par Pierre-Roland Giot,
-la pendeloque anthropomorphe en os de l’île Lavret constitue un objet exceptionnel
-dans le contexte armoricain.
-</p>
-
-<h2>Un objet en deux stades</h2>
-
-<p>
-L’étude publiée en 1984 montre que l’objet a connu au moins deux phases de fabrication.
-À l’origine, il s’agissait probablement d’une pendeloque géométrique,
-proche des amulettes cylindriques mérovingiennes du domaine germanique.
+Découverte lors des fouilles dirigées par Pierre-Roland Giot,
+la pendeloque anthropomorphe en os de l’île Lavret constitue
+un objet exceptionnel dans le contexte du très haut Moyen Âge armoricain.
 </p>
 
 <p>
-Dans un second temps, l’objet fut anthropomorphisé :
-le visage est dégagé par enlèvements au couteau,
-le nez laissé en réserve,
-la bouche incisée,
-la partie supérieure conique percée d’un trou de suspension.
+L’analyse publiée en 1984 montre que l’objet a connu deux stades :
+une première pendeloque géométrique proche des amulettes mérovingiennes
+du domaine germanique, puis une anthropomorphisation secondaire
+réalisée au couteau.
 </p>
 
 <div class="map-full" style="margin-top:2rem;">
-<img src="images/accueil/pendeloque-comparaison.jpg"
-     alt="Comparaison entre la pendeloque de Lavret et des pendeloques cylindriques de Darstadt">
+<img alt="Comparaison avec pendeloques cylindriques de Darstadt"
+     src="images/accueil/pendeloque-comparaison.jpg"/>
 </div>
 
-<h2>Ouverture culturelle</h2>
-
 <p>
-Les comparaisons établies avec des exemplaires de Darstadt,
-de la vallée du Rhin ou de Bavière (VIe–VIIe siècles)
-suggèrent une diffusion par voie maritime plutôt qu’une importation directe.
+La parenté morphologique avec des exemplaires de Darstadt,
+de la vallée du Rhin et de Bavière (VIe–VIIe siècles)
+suggère une circulation maritime des modèles ou des idées.
 </p>
 
 <p>
-Cet objet singulier rappelle combien la Bretagne littorale,
-au sein du royaume de Domnonée,
-était ouverte aux influences venues du monde franc
-et insérée dans des réseaux d’échanges à large échelle.
+Cet objet rare illustre l’ouverture du royaume de Domnonée
+aux influences franques et rhénanes,
+et rappelle que la Bretagne littorale du VIIe siècle
+était insérée dans des réseaux d’échanges à large échelle.
 </p>
 
 </section>
