--- a/pendeloque.html
+++ b/pendeloque.html
@@ -86,10 +86,10 @@
 <div class="lieu-wrapper">
 <h1 class="lieu-title">La pendeloque anthropomorphe de l’île Lavret</h1>
 
-<div class="map-full">
-<img alt="Pendeloque anthropomorphe de l’île Lavret"
-     src="images/accueil/pendeloque-lavret.jpg"/>
-</div>
+<div class="map-full" style="text-align:center;">
+  <img src="images/accueil/pendeloque-lavret.jpg"
+       alt="Pendeloque anthropomorphe de l’île Lavret"
+       style="max-width:420px; width:100%; height:auto;">
 </div>
 
 <section style="max-width:900px;margin:3rem auto;line-height:1.7;font-size:1.05rem;">
@@ -107,9 +107,10 @@ du domaine germanique, puis une anthropomorphisation secondaire
 réalisée au couteau.
 </p>
 
-<div class="map-full" style="margin-top:2rem;">
-<img alt="Comparaison avec pendeloques cylindriques de Darstadt"
-     src="images/accueil/pendeloque-comparaison.jpg"/>
+<div class="map-full" style="text-align:center; margin-top:2rem;">
+  <img src="images/accueil/pendeloque-comparaison.jpg"
+       alt="Comparaison pendeloques"
+       style="max-width:700px; width:100%; height:auto;">
 </div>
 
 <p>
