--- a/lavret.html
+++ b/lavret.html
@@ -153,6 +153,16 @@
   box-shadow:0 2px 4px rgba(0,0,0,0.6);
 }
 </style>
+  <style>
+.lien-pendeloque {
+  color: #f28c28 !important;
+  text-decoration: none;
+}
+
+.lien-pendeloque:hover {
+  text-decoration: underline;
+}
+</style>
 <style>
 .social-icons .icon{
   display:inline-flex;
@@ -351,8 +361,8 @@ main{
   </p>
 
   <p>
-    Parmi les objets découverts figure une <a href="pendeloque.html">
-pendeloque
+    Parmi les objets découverts figure une <a href="pendeloque.html" class="lien-pendeloque">
+<strong>PENDELOQUE</strong>
 </a>
     retrouvée en contexte funéraire.
     Son style et sa typologie ont intrigué Giot :
