--- a/lavret.html
+++ b/lavret.html
@@ -362,7 +362,7 @@ main{
 
   <p>
     Parmi les objets découverts figure une <a href="pendeloque.html" class="lien-pendeloque">
-<strong>PENDELOQUE</strong>
+<strong>pendeloque</strong>
 </a>
     retrouvée en contexte funéraire.
     Son style et sa typologie ont intrigué Giot :
