--- a/pendeloque.html
+++ b/pendeloque.html
@@ -89,7 +89,7 @@
 <div class="map-full" style="text-align:center;">
   <img src="images/accueil/pendeloque-lavret.jpg"
        alt="Pendeloque anthropomorphe de l’île Lavret"
-       style="max-width:420px; width:100%; height:auto;">
+       style="max-width:420px; height:auto;">
 </div>
 
 <section style="max-width:900px;margin:3rem auto;line-height:1.7;font-size:1.05rem;">
@@ -110,7 +110,7 @@ réalisée au couteau.
 <div class="map-full" style="text-align:center; margin-top:2rem;">
   <img src="images/accueil/pendeloque-comparaison.jpg"
        alt="Comparaison pendeloques"
-       style="max-width:700px; width:100%; height:auto;">
+       style="max-width:700px; height:auto;">
 </div>
 
 <p>
