--- a/pendeloque.html
+++ b/pendeloque.html
@@ -60,7 +60,14 @@
 .social-icons a{color:#f28c28;font-size:1.1rem;text-decoration:none;margin-right:0.6rem;}
 .footer-right .buy-btn{background:#f28c28;color:#000;padding:0.6rem 1.2rem;text-decoration:none;font-weight:500;}
 </style>
-
+<style>
+.map-full img {
+  width: auto !important;
+  max-width: 600px !important;
+  display: block !important;
+  margin: 0 auto !important;
+}
+</style>
 </head>
 <body>
 
