--- a/pendeloque.html
+++ b/pendeloque.html
@@ -1,74 +1,122 @@
 <!DOCTYPE html>
-
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <meta name="description" content="La pendeloque anthropomorphe de l’île Lavret — étude archéologique d’après Pierre-Roland Giot.">
 <link rel="canonical" href="https://azenor.org/pendeloque.html">
+
 <meta property="og:locale" content="fr_FR">
 <meta property="og:type" content="article">
-<meta property="og:title" content="La pendeloque anthropomorphe de l’île Lavret | Le Testament d’Azénor">
-<meta property="og:description" content="La pendeloque anthropomorphe en os découverte sur l’île Lavret.">
+<meta property="og:title" content="La pendeloque de l’île Lavret | Le Testament d’Azénor">
+<meta property="og:description" content="Étude de la pendeloque anthropomorphe découverte sur l’île Lavret.">
 <meta property="og:url" content="https://azenor.org/pendeloque.html">
 <meta property="og:site_name" content="Le Testament d’Azénor">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="La pendeloque anthropomorphe de l’île Lavret">
-<meta name="twitter:description" content="Étude archéologique de la pendeloque de Lavret.">
 
-<title>La pendeloque anthropomorphe de l’île Lavret | Le Testament d’Azénor</title>
+<title>La pendeloque de l’île Lavret | Le Testament d’Azénor</title>
 
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp&family=Inter:wght@300&400&500&amp&display=swap" rel="stylesheet"/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
 
 <style>
-    .lieu-wrapper{
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 16px;
-    }
+.lieu-wrapper{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 16px;
+}
 
-    .lieu-title{
-      text-align: center;
-      color: #f28c28;
-      font-family: 'Libre Baskerville', serif;
-      font-size: 2.2rem;
-      margin: 2.5rem 0 2rem;
-    }
+.lieu-title{
+  text-align:center;
+  color:#f28c28;
+  font-family:'Libre Baskerville', serif;
+  font-size:2.2rem;
+  margin:2.5rem 0 2rem;
+}
 
-    .map-full{
-      width: 100%;
-      height: auto;
-      margin: 0 auto;
-    }
-    .map-full img{
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-</style>
+.image-center{
+  text-align:center;
+  margin:2rem 0;
+}
 
-<!-- TOUS TES BLOCS FOOTER CSS REPRIS À L’IDENTIQUE -->
-<style>
-.site-footer{background:#000;margin-top:4rem;padding:1.5rem 0;}
-.site-footer .footer-inner{max-width:1200px;margin:0 auto;padding:0 1.5rem;display:flex;justify-content:space-between;align-items:center;}
-.footer-left{display:flex;align-items:center;gap:1rem;}
-.like-btn{background:none;border:1px solid #f28c28;color:#f28c28;padding:0.4rem 0.8rem;cursor:pointer;}
-.social-icons a{color:#f28c28;font-size:1.1rem;text-decoration:none;margin-right:0.6rem;}
-.footer-right .buy-btn{background:#f28c28;color:#000;padding:0.6rem 1.2rem;text-decoration:none;font-weight:500;}
-</style>
-<style>
-.map-full img {
-  width: auto !important;
-  max-width: 600px !important;
-  display: block !important;
-  margin: 0 auto !important;
+.image-center img{
+  width:auto;
+  max-width:600px;
+  height:auto;
+  display:inline-block;
+}
+
+.lieu-content{
+  max-width:900px;
+  margin:3rem auto;
+  line-height:1.7;
+  font-size:1.05rem;
 }
 </style>
+
+<style>
+.site-footer{
+  background:#000;
+  margin-top:4rem;
+  padding:1.6rem 0;
+}
+
+.site-footer .footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 1.5rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.footer-left{
+  display:flex;
+  align-items:center;
+  gap:1.2rem;
+}
+
+.like-btn{
+  background:none;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  padding:0.35rem 0.7rem;
+  cursor:pointer;
+  font-size:0.9rem;
+}
+
+.social-icons .icon{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+  margin-right:0.5rem;
+}
+
+.social-icons svg{
+  width:16px;
+  height:16px;
+  fill:#f28c28;
+}
+
+.footer-right .buy-btn{
+  background:linear-gradient(#3a3a3a, #1f1f1f);
+  color:#f28c28;
+  padding:0.55rem 1.2rem;
+  text-decoration:none;
+  font-weight:500;
+  border-radius:3px;
+  box-shadow:0 2px 4px rgba(0,0,0,0.6);
+}
+</style>
+
 </head>
+
 <body>
 
 <header class="site-header">
@@ -93,44 +141,31 @@
 <div class="lieu-wrapper">
 <h1 class="lieu-title">La pendeloque anthropomorphe de l’île Lavret</h1>
 
-<div class="map-full" style="text-align:center;">
-  <img src="images/accueil/pendeloque-lavret.jpg"
-       alt="Pendeloque anthropomorphe de l’île Lavret"
-       style="max-width:420px; height:auto;">
+<div class="image-center">
+<img src="images/accueil/pendeloque-lavret.jpg" alt="Pendeloque anthropomorphe en os découverte à Lavret">
+</div>
 </div>
 
-<section style="max-width:900px;margin:3rem auto;line-height:1.7;font-size:1.05rem;">
+<section class="lieu-content">
 
 <p>
-Découverte lors des fouilles dirigées par Pierre-Roland Giot,
-la pendeloque anthropomorphe en os de l’île Lavret constitue
-un objet exceptionnel dans le contexte du très haut Moyen Âge armoricain.
+Découverte lors des fouilles dirigées par Pierre-Roland Giot, la pendeloque anthropomorphe en os de l’île Lavret constitue un objet singulier du très haut Moyen Âge armoricain.
 </p>
 
 <p>
-L’analyse publiée en 1984 montre que l’objet a connu deux stades :
-une première pendeloque géométrique proche des amulettes mérovingiennes
-du domaine germanique, puis une anthropomorphisation secondaire
-réalisée au couteau.
+L’analyse publiée en 1984 montre que l’objet a connu deux stades : une pendeloque géométrique initiale, proche des amulettes mérovingiennes germaniques, puis une anthropomorphisation secondaire réalisée au couteau.
 </p>
 
-<div class="map-full" style="text-align:center; margin-top:2rem;">
-  <img src="images/accueil/pendeloque-comparaison.jpg"
-       alt="Comparaison pendeloques"
-       style="max-width:700px; height:auto;">
+<div class="image-center">
+<img src="images/accueil/pendeloque-comparaison.jpg" alt="Comparaison avec des pendeloques de Darstadt">
 </div>
 
 <p>
-La parenté morphologique avec des exemplaires de Darstadt,
-de la vallée du Rhin et de Bavière (VIe–VIIe siècles)
-suggère une circulation maritime des modèles ou des idées.
+La parenté morphologique avec des exemplaires de la vallée du Rhin et de Bavière (VIe–VIIe siècles) suggère une diffusion par voie maritime plutôt qu’une importation directe.
 </p>
 
 <p>
-Cet objet rare illustre l’ouverture du royaume de Domnonée
-aux influences franques et rhénanes,
-et rappelle que la Bretagne littorale du VIIe siècle
-était insérée dans des réseaux d’échanges à large échelle.
+Cet objet illustre l’ouverture du royaume de Domnonée aux influences franques et rappelle l’insertion de la Bretagne littorale dans des réseaux d’échanges à large échelle.
 </p>
 
 </section>
@@ -142,39 +177,25 @@ et rappelle que la Bretagne littorale du VIIe siècle
 <div class="footer-left">
 <button class="like-btn">❤</button>
 <div class="social-icons">
-<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank" title="LinkedIn"></a>
-<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank" title="X"></a>
-<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank" title="Facebook"></a>
-</div>
-</div>
-<div class="footer-right">
-<a class="buy-btn" href="achat.html">Acheter le livre</a>
-</div>
-</div>
-</footer>
-<footer class="site-footer">
-<div class="footer-inner">
-<div class="footer-left">
-<button class="like-btn">❤</button>
-<div class="social-icons">
-<!-- LinkedIn -->
+
 <a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank" title="LinkedIn">
 <svg aria-hidden="true" viewBox="0 0 24 24">
-<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
+<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"/>
 </svg>
 </a>
-<!-- X -->
+
 <a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank" title="X">
 <svg aria-hidden="true" viewBox="0 0 24 24">
-<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
+<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"/>
 </svg>
 </a>
-<!-- Facebook -->
+
 <a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank" title="Facebook">
 <svg aria-hidden="true" viewBox="0 0 24 24">
-<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
+<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/>
 </svg>
 </a>
+
 </div>
 </div>
 <div class="footer-right">
@@ -182,5 +203,6 @@ et rappelle que la Bretagne littorale du VIIe siècle
 </div>
 </div>
 </footer>
+
 </body>
 </html>
