--- a/pendeloque.html
+++ b/pendeloque.html
@@ -134,6 +134,42 @@
 <a href="contact.html">contact</a>
 </div>
 </nav>
+  /* ----------- MOBILE OPTIMISATION ----------- */
+
+@media screen and (max-width: 768px){
+
+  .lieu-title{
+    font-size:1.6rem;
+    margin:2rem 0 1.5rem;
+    padding:0 10px;
+  }
+
+  .lieu-content{
+    font-size:1rem;
+    padding:0 12px;
+    margin:2rem auto;
+  }
+
+  .image-center img{
+    max-width:100%;
+    width:100%;
+    height:auto;
+  }
+
+  .site-footer .footer-inner{
+    flex-direction:column;
+    gap:1rem;
+    text-align:center;
+  }
+
+  .nav-menu{
+    display:flex;
+    flex-wrap:wrap;
+    gap:0.5rem;
+    justify-content:center;
+  }
+
+}
 </header>
 
 <main>
@@ -203,6 +239,8 @@ Cet objet illustre l’ouverture du royaume de Domnonée aux influences franques
 </div>
 </div>
 </footer>
-
+body{
+  background-color:#ececec;
+}
 </body>
 </html>
