--- a/pendeloque.html
+++ b/pendeloque.html
@@ -114,28 +114,13 @@
   box-shadow:0 2px 4px rgba(0,0,0,0.6);
 }
 </style>
+<style>
+/* FOND GRIS */
+html, body{
+  background-color:#f3f3f1 !important;
+}
 
-</head>
-
-<body>
-
-<header class="site-header">
-<nav class="nav">
-<div class="nav-title">
-<a href="lavret.html">retour</a>
-</div>
-<div class="nav-menu">
-<a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
-<a href="personnages.html">les<span>personnages</span></a>
-<a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
-<a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
-<a href="bibliographie.html">bibliographie</a>
-<a href="making-off.html">making of</a>
-<a href="contact.html">contact</a>
-</div>
-</nav>
-  /* ----------- MOBILE OPTIMISATION ----------- */
-
+/* ----------- MOBILE OPTIMISATION ----------- */
 @media screen and (max-width: 768px){
 
   .lieu-title{
@@ -168,6 +153,28 @@
     gap:0.5rem;
     justify-content:center;
   }
+}
+</style>
+</head>
+
+<body>
+
+<header class="site-header">
+<nav class="nav">
+<div class="nav-title">
+<a href="lavret.html">retour</a>
+</div>
+<div class="nav-menu">
+<a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
+<a href="personnages.html">les<span>personnages</span></a>
+<a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
+<a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
+<a href="bibliographie.html">bibliographie</a>
+<a href="making-off.html">making of</a>
+<a href="contact.html">contact</a>
+</div>
+</nav>
+
 
 }
 </header>
