--- a/pendeloque.html
+++ b/pendeloque.html
@@ -160,6 +160,12 @@ html, body{
   background-color:#cfcfcf;
 }
 </style>
+  <style>
+/* FORCE FOND GRIS (plus foncé) */
+html, body, main{
+  background:#bdbdbd !important;
+}
+</style>
 </head>
 
 <body>
