--- a/pendeloque.html
+++ b/pendeloque.html
@@ -117,7 +117,7 @@
 <style>
 /* FOND GRIS */
 html, body{
-  background-color:#f3f3f1 !important;
+  background-color:#8f8f8f !important;
 }
 
 /* ----------- MOBILE OPTIMISATION ----------- */
