--- a/pendeloque.html
+++ b/pendeloque.html
@@ -154,16 +154,9 @@ html, body{
     justify-content:center;
   }
 
-</style>
-  <style>
+<style>
 html, body{
-  background-color:#cfcfcf;
-}
-</style>
-  <style>
-/* FORCE FOND GRIS (plus foncé) */
-html, body, main{
-  background:#bdbdbd !important;
+  background:#5c5c5c;
 }
 </style>
 </head>
