--- a/ouessant.html
+++ b/ouessant.html
@@ -1,303 +1,105 @@
 <!DOCTYPE html>
-
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <meta name="description" content="Île d’Ouessant (Enez Eussa) — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-  <link rel="canonical" href="https://alain7544.azenor.org/ouessant.html">
-  <meta property="og:locale" content="fr_FR">
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="Île d’Ouessant (Enez Eussa) | Le Testament d’Azénor">
-  <meta property="og:description" content="Île d’Ouessant (Enez Eussa) — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-  <meta property="og:url" content="https://alain7544.azenor.org/ouessant.html">
-  <meta property="og:site_name" content="Le Testament d’Azénor">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Île d’Ouessant (Enez Eussa) | Le Testament d’Azénor">
-  <meta name="twitter:description" content="Île d’Ouessant (Enez Eussa) — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-<title>Île d’Ouessant (Enez Eussa) | Le Testament d’Azénor</title>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp&family=Inter:wght@300&400&500&amp&display=swap" rel="stylesheet"/>
+<meta name="description" content="Île d’Ouessant (Enez Eusa) — mémoire insulaire, archéologie et christianisation dans Le Testament d’Azénor.">
+<link rel="canonical" href="https://azenor.org/ouessant.html">
+
+<meta property="og:locale" content="fr_FR">
+<meta property="og:type" content="article">
+<meta property="og:title" content="Île d’Ouessant (Enez Eusa) | Le Testament d’Azénor">
+<meta property="og:description" content="Mémoire antique, fouilles archéologiques et passage de Paol Aurélien.">
+<meta property="og:url" content="https://azenor.org/ouessant.html">
+<meta property="og:site_name" content="Le Testament d’Azénor">
+
+<title>Île d’Ouessant (Enez Eusa) | Le Testament d’Azénor</title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
+
 <style>
-    /* --- Ouessant : CENTRER TITRE + CARTE, AVEC BANDEAU & FOND DU SITE --- */
 
-    .lieu-wrapper{
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 16px;
-    }
-
-    .lieu-title{
-      text-align: center;
-      color: #f28c28;
-      font-family: 'Libre Baskerville', serif;
-      font-size: 2.2rem;
-      margin: 2.5rem 0 2rem;
-    }
-
-    .map-full{
-      width: 100%;
-      height: auto;
-      margin: 0 auto;
-    }
-    .map-full img{
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-  </style>
-<style>
-/* ===== FOOTER AMÉLIORÉ ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.5rem 0;
+/* ===== FOND GLOBAL ===== */
+html, body{
+  background:#5c5c5c;
+  margin:0;
+  padding:0;
 }
 
-.site-footer .footer-inner{
+/* ===== STRUCTURE ===== */
+.lieu-wrapper{
   max-width:1200px;
   margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+  padding:0 16px;
 }
 
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
+.lieu-title{
+  text-align:center;
   color:#f28c28;
-  padding:0.4rem 0.8rem;
-  cursor:pointer;
+  font-family:'Libre Baskerville', serif;
+  font-size:2.2rem;
+  margin:2.5rem 0 2rem;
 }
 
-.social-icons a{
-  color:#f28c28;
-  font-size:1.1rem;
-  text-decoration:none;
-  margin-right:0.6rem;
+.map-full img{
+  width:100%;
+  height:auto;
+  display:block;
 }
 
-.footer-right .buy-btn{
-  background:#f28c28;
+/* ===== CONTENU ===== */
+.lieu-content{
+  max-width:900px;
+  margin:3rem auto 4rem;
+  background:#ffffff;
+  padding:2.5rem;
+  border-radius:8px;
+  line-height:1.7;
+  font-size:1.05rem;
   color:#000;
-  padding:0.6rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-}
-</style>
-<style>
-/* ===== FOOTER AMÉLIORÉ v2 ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.6rem 0;
 }
 
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1.2rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
+.lieu-content h2{
   color:#f28c28;
-  padding:0.35rem 0.7rem;
-  cursor:pointer;
-  font-size:0.9rem;
+  font-family:'Libre Baskerville', serif;
+  margin-top:3rem;
+  margin-bottom:1rem;
+  font-size:1.6rem;
+  position:relative;
 }
 
-/* Social icons as round glyphs */
-.social-icons a{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:28px;
-  height:28px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  font-size:0.85rem;
-  font-weight:600;
-  text-decoration:none;
-}
-
-/* Buy button: grey relief, orange text */
-.footer-right .buy-btn{
-  background:linear-gradient(#3a3a3a, #1f1f1f);
-  color:#f28c28;
-  padding:0.55rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-  border-radius:3px;
-  box-shadow:0 2px 4px rgba(0,0,0,0.6);
-}
-</style>
-<style>
-.social-icons .icon{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:32px;
-  height:32px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  margin-right:0.5rem;
-}
-.social-icons svg{
-  width:16px;
-  height:16px;
-  fill:#f28c28;
-}
-</style>
-<style>
-/* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
-main{
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;
-}
-
-.site-footer{
-  margin-top: 0 !important;
-}
-</style>
-<style>
-/* ===== FOOTER AMÉLIORÉ ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.5rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.4rem 0.8rem;
-  cursor:pointer;
-}
-
-.social-icons a{
-  color:#f28c28;
-  font-size:1.1rem;
-  text-decoration:none;
-  margin-right:0.6rem;
-}
-
-.footer-right .buy-btn{
+.lieu-content h2::after{
+  content:"";
+  display:block;
+  width:60px;
+  height:2px;
   background:#f28c28;
-  color:#000;
-  padding:0.6rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-}
-</style>
-<style>
-/* ===== FOOTER AMÉLIORÉ v2 ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.6rem 0;
+  margin-top:8px;
 }
 
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+/* ===== MOBILE ===== */
+@media screen and (max-width:768px){
+
+  .lieu-title{
+    font-size:1.7rem;
+  }
+
+  .lieu-content{
+    padding:1.5rem;
+    font-size:1rem;
+  }
+
 }
 
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1.2rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.35rem 0.7rem;
-  cursor:pointer;
-  font-size:0.9rem;
-}
-
-/* Social icons as round glyphs */
-.social-icons a{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:28px;
-  height:28px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  font-size:0.85rem;
-  font-weight:600;
-  text-decoration:none;
-}
-
-/* Buy button: grey relief, orange text */
-.footer-right .buy-btn{
-  background:linear-gradient(#3a3a3a, #1f1f1f);
-  color:#f28c28;
-  padding:0.55rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-  border-radius:3px;
-  box-shadow:0 2px 4px rgba(0,0,0,0.6);
-}
-</style>
-<style>
-/* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
-main{
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;
-}
-
-.site-footer{
-  margin-top: 0 !important;
-}
 </style>
 </head>
+
 <body>
+
 <header class="site-header">
 <nav class="nav">
 <div class="nav-title">
@@ -314,41 +116,72 @@ main{
 </div>
 </nav>
 </header>
+
 <main>
-<div class='\"lieu-wrapper\"'>
-<h1 class="lieu-title">Île d’Ouessant (Enez Eussa)</h1>
-<div class="map-full"><img alt="Carte : Ouessant" src="images/cartes/ouessant.jpg"/></div>
+
+<div class="lieu-wrapper">
+<h1 class="lieu-title">Île d’Ouessant (Enez Eusa)</h1>
+<div class="map-full">
+<img src="images/cartes/ouessant.jpg" alt="Carte de l’île d’Ouessant">
 </div>
+</div>
+
+<section class="lieu-content">
+
+<h2>Un héritage insulaire ancien</h2>
+
+<p>
+Les “trois sorcières” ne surgissent pas du néant. Leur figure s’inscrit dans une mémoire plus ancienne, évoquée dès l’Antiquité par <strong>[Pomponius Mela](chatgpt://generic-entity?number=0)</strong>, qui mentionne l’île de Sena, habitée par neuf prêtresses capables de lever les tempêtes et de prédire l’avenir.
+</p>
+
+<p>
+Si l’identification géographique demeure discutée, la tradition bretonne a souvent rapproché cette île des terres du Ponant. Avec le temps, ces prêtresses sont devenues, dans le regard chrétien, des sorcières : non plus gardiennes d’un culte, mais survivances d’un monde ancien.
+</p>
+
+<h2>Archéologie du rivage : les berniques</h2>
+
+<p>
+Les fouilles archéologiques menées sur l’île ont mis au jour d’importants amas coquilliers constitués sur plusieurs siècles. Les accumulations de patelles — les berniques — témoignent d’une économie littorale structurée et d’une présence humaine durable.
+</p>
+
+<p>
+Ces dépôts sont de véritables archives du quotidien. Ils rappellent que la survie sur l’île reposait sur une connaissance précise des marées, des saisons et des ressources marines. Dans le roman, ces berniques deviennent matière symbolique : l’élément le plus humble du rivage se transforme en signe, voire en instrument de violence.
+</p>
+
+<h2>Le passage de Paol Aurélien</h2>
+
+<p>
+La tradition hagiographique rapporte que <strong>[Saint Pol Aurélien](chatgpt://generic-entity?number=1)</strong> aborda d’abord l’île avant de rejoindre le continent et de fonder le siège épiscopal du Léon.
+</p>
+
+<p>
+Ce détail souligne le rôle d’Enez Eusa comme seuil : lieu d’arrivée, de transition et peut-être de confrontation symbolique avant l’installation chrétienne durable.
+</p>
+
+<h2>Résistance et mémoire</h2>
+
+<p>
+Rozenn, Maod et Berc’hed n’incarnent pas un druidisme intact. Elles figurent plutôt la persistance d’un imaginaire insulaire attaché aux cycles naturels et aux forces marines, au moment où l’unification chrétienne tente d’imposer une nouvelle lecture du monde.
+</p>
+
+<p>
+L’île devient ainsi un espace liminaire : frontière géographique, religieuse et symbolique, où se joue une tension entre continuité et effacement.
+</p>
+
+</section>
+
 </main>
+
 <footer class="site-footer">
 <div class="footer-inner">
 <div class="footer-left">
 <button class="like-btn">❤</button>
-<div class="social-icons">
-<!-- LinkedIn -->
-<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank" title="LinkedIn">
-<svg aria-hidden="true" viewbox="0 0 24 24">
-<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
-</svg>
-</a>
-<!-- X -->
-<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank" title="X">
-<svg aria-hidden="true" viewbox="0 0 24 24">
-<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
-</svg>
-</a>
-<!-- Facebook -->
-<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank" title="Facebook">
-<svg aria-hidden="true" viewbox="0 0 24 24">
-<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
-</svg>
-</a>
-</div>
 </div>
 <div class="footer-right">
 <a class="buy-btn" href="achat.html">Acheter le livre</a>
 </div>
 </div>
 </footer>
+
 </body>
 </html>
