--- a/ouessant.html
+++ b/ouessant.html
@@ -135,7 +135,15 @@ a:hover{
   border-radius:3px;
   box-shadow:0 2px 4px rgba(0,0,0,0.6);
 }
+.lien-sorcieres{
+  color:#f28c28;
+  text-decoration:none;
+  font-weight:500;
+}
 
+.lien-sorcieres:hover{
+  text-decoration:underline;
+}
 </style>
 </head>
 
@@ -172,7 +180,7 @@ a:hover{
 <h2>Un héritage insulaire ancien</h2>
 
 <p>
-Les “trois sorcières” ne surgissent pas du néant. Leur figure s’inscrit dans une mémoire plus ancienne, évoquée dès l’Antiquité par Pomponius Mela, qui mentionne l’île de Sena, habitée par neuf prêtresses capables de lever les tempêtes et de prédire l’avenir.
+Les <a href="sorcieres.html" class="lien-sorcieres">trois sorcières</a> ne surgissent pas du néant. Leur figure s’inscrit dans une mémoire plus ancienne, évoquée dès l’Antiquité par Pomponius Mela, qui mentionne l’île de Sena, habitée par neuf prêtresses capables de lever les tempêtes et de prédire l’avenir.
 </p>
 
 <p>
@@ -182,7 +190,7 @@ Si l’identification géographique demeure discutée, la tradition bretonne a s
 <h2>Archéologie du rivage : les berniques</h2>
 
 <p>
-Les fouilles archéologiques ont mis au jour d’importants amas coquilliers constitués sur plusieurs siècles. Les accumulations de patelles — les berniques — témoignent d’une économie littorale structurée et d’une présence humaine durable.
+Les récentes fouilles archéologiques ont mis au jour d’importants amas coquilliers constitués sur plusieurs siècles. Les accumulations de patelles — les berniques — témoignent d’une économie littorale structurée et d’une présence humaine durable.
 </p>
 
 <p>
