--- a/aran.html
+++ b/aran.html
@@ -1,354 +1,301 @@
 <!DOCTYPE html>
-
 <html lang="fr">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <meta name="description" content="Les îles d’Aran — personnage du roman Le Testament d’Azénor : portrait, rôle et contexte dans l’univers.">
-  <link rel="canonical" href="https://alain7544.azenor.org/aran.html">
+  <meta name="description" content="Les îles d’Aran — Saint Enda, Colum Cille et la tradition du « bateau de pierre » (Bád na Naomh) dans l’univers du Testament d’Azénor.">
+  <link rel="canonical" href="https://azenor.org/aran.html">
+
   <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Les îles d’Aran | Le Testament d’Azénor">
-  <meta property="og:description" content="Les îles d’Aran — personnage du roman Le Testament d’Azénor : portrait, rôle et contexte dans l’univers.">
-  <meta property="og:url" content="https://alain7544.azenor.org/aran.html">
+  <meta property="og:description" content="Saint Enda, Colum Cille et la tradition du « bateau de pierre » (Bád na Naomh).">
+  <meta property="og:url" content="https://azenor.org/aran.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
+
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Les îles d’Aran | Le Testament d’Azénor">
-  <meta name="twitter:description" content="Les îles d’Aran — personnage du roman Le Testament d’Azénor : portrait, rôle et contexte dans l’univers.">
-<title>Les îles d’Aran | Le Testament d’Azénor</title>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp&family=Inter:wght@300&400&500&amp&display=swap" rel="stylesheet"/>
-<link href="css/style.css?v=20260115" rel="stylesheet"/>
-<style>
-    /* --- Ouessant : CENTRER TITRE + CARTE, AVEC BANDEAU & FOND DU SITE --- */
+  <meta name="twitter:description" content="Saint Enda, Colum Cille et la tradition du « bateau de pierre » (Bád na Naomh).">
 
+  <title>Les îles d’Aran | Le Testament d’Azénor</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="css/style.css?v=20260115" rel="stylesheet"/>
+
+  <style>
+    /* ===== Mise en page : titre + carte ===== */
     .lieu-wrapper{
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 16px;
+      max-width:1200px;
+      margin:0 auto;
+      padding:0 16px;
     }
 
     .lieu-title{
-      text-align: center;
-      color: #f28c28;
-      font-family: 'Libre Baskerville', serif;
-      font-size: 2.2rem;
-      margin: 2.5rem 0 2rem;
+      text-align:center;
+      color:#f28c28;
+      font-family:'Libre Baskerville', serif;
+      font-size:2.2rem;
+      margin:2.5rem 0 2rem;
     }
 
-    .map-full{
-      width: 100%;
-      height: auto;
-      margin: 0 auto;
-    }
     .map-full img{
-      width: 100%;
-      height: auto;
-      display: block;
+      width:100%;
+      height:auto;
+      display:block;
+    }
+
+    /* ===== Contenu ===== */
+    .lieu-content{
+      max-width:900px;
+      margin:3rem auto 4rem;
+      padding:0 16px;
+      line-height:1.75;
+      font-size:1.05rem;
+    }
+
+    .lieu-content h2{
+      color:#f28c28;
+      font-family:'Libre Baskerville', serif;
+      margin:3rem 0 1rem;
+      font-size:1.6rem;
+    }
+
+    .lieu-content p{
+      margin:0 0 1.2rem;
+    }
+
+    /* Note de source (lien vers page dédiée) */
+    .note-source{
+      margin-top:1.3rem;
+      font-size:0.95rem;
+      opacity:0.9;
+    }
+
+    .note-source a{
+      color:#f28c28;
+      text-decoration:none;
+      font-weight:500;
+    }
+    .note-source a:hover{ text-decoration:underline; }
+
+    /* ===== Mobile ===== */
+    @media screen and (max-width:768px){
+      .lieu-title{ font-size:1.7rem; }
+      .lieu-content{ font-size:1rem; }
+      .lieu-content h2{ font-size:1.45rem; }
+    }
+
+    /* ===== Footer (unique, propre) ===== */
+    .site-footer{
+      background:#000;
+      margin-top:4rem;
+      padding:1.6rem 0;
+    }
+
+    .site-footer .footer-inner{
+      max-width:1200px;
+      margin:0 auto;
+      padding:0 1.5rem;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+    }
+
+    .footer-left{
+      display:flex;
+      align-items:center;
+      gap:1.2rem;
+    }
+
+    .like-btn{
+      background:none;
+      border:1px solid #f28c28;
+      color:#f28c28;
+      padding:0.35rem 0.7rem;
+      cursor:pointer;
+      font-size:0.9rem;
+    }
+
+    .social-icons .icon{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      width:32px;
+      height:32px;
+      border-radius:50%;
+      border:1px solid #f28c28;
+      margin-right:0.5rem;
+      text-decoration:none;
+    }
+
+    .social-icons svg{
+      width:16px;
+      height:16px;
+      fill:#f28c28;
+    }
+
+    .footer-right .buy-btn{
+      background:linear-gradient(#3a3a3a, #1f1f1f);
+      color:#f28c28;
+      padding:0.55rem 1.2rem;
+      text-decoration:none;
+      font-weight:500;
+      border-radius:3px;
+      box-shadow:0 2px 4px rgba(0,0,0,0.6);
     }
   </style>
-<style>
-/* ===== FOOTER AMÉLIORÉ ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.5rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.4rem 0.8rem;
-  cursor:pointer;
-}
-
-.social-icons a{
-  color:#f28c28;
-  font-size:1.1rem;
-  text-decoration:none;
-  margin-right:0.6rem;
-}
-
-.footer-right .buy-btn{
-  background:#f28c28;
-  color:#000;
-  padding:0.6rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-}
-</style>
-<style>
-/* ===== FOOTER AMÉLIORÉ v2 ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.6rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1.2rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.35rem 0.7rem;
-  cursor:pointer;
-  font-size:0.9rem;
-}
-
-/* Social icons as round glyphs */
-.social-icons a{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:28px;
-  height:28px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  font-size:0.85rem;
-  font-weight:600;
-  text-decoration:none;
-}
-
-/* Buy button: grey relief, orange text */
-.footer-right .buy-btn{
-  background:linear-gradient(#3a3a3a, #1f1f1f);
-  color:#f28c28;
-  padding:0.55rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-  border-radius:3px;
-  box-shadow:0 2px 4px rgba(0,0,0,0.6);
-}
-</style>
-<style>
-.social-icons .icon{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:32px;
-  height:32px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  margin-right:0.5rem;
-}
-.social-icons svg{
-  width:16px;
-  height:16px;
-  fill:#f28c28;
-}
-</style>
-<style>
-/* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
-main{
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;
-}
-
-.site-footer{
-  margin-top: 0 !important;
-}
-</style>
-<style>
-/* ===== FOOTER AMÉLIORÉ ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.5rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.4rem 0.8rem;
-  cursor:pointer;
-}
-
-.social-icons a{
-  color:#f28c28;
-  font-size:1.1rem;
-  text-decoration:none;
-  margin-right:0.6rem;
-}
-
-.footer-right .buy-btn{
-  background:#f28c28;
-  color:#000;
-  padding:0.6rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-}
-</style>
-<style>
-/* ===== FOOTER AMÉLIORÉ v2 ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.6rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1.2rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.35rem 0.7rem;
-  cursor:pointer;
-  font-size:0.9rem;
-}
-
-/* Social icons as round glyphs */
-.social-icons a{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:28px;
-  height:28px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  font-size:0.85rem;
-  font-weight:600;
-  text-decoration:none;
-}
-
-/* Buy button: grey relief, orange text */
-.footer-right .buy-btn{
-  background:linear-gradient(#3a3a3a, #1f1f1f);
-  color:#f28c28;
-  padding:0.55rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-  border-radius:3px;
-  box-shadow:0 2px 4px rgba(0,0,0,0.6);
-}
-</style>
-<style>
-/* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
-main{
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;
-}
-
-.site-footer{
-  margin-top: 0 !important;
-}
-</style>
 </head>
+
 <body>
+
 <header class="site-header">
-<nav class="nav">
-<div class="nav-title">
-<a href="index.html">retour</a>
-</div>
-<div class="nav-menu">
-<a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
-<a href="personnages.html">les<span>personnages</span></a>
-<a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
-<a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
-<a href="bibliographie.html">bibliographie</a>
-<a href="making-off.html">making of</a>
-<a href="contact.html">contact</a>
-</div>
-</nav>
+  <nav class="nav">
+    <div class="nav-title">
+      <a href="index.html">retour</a>
+    </div>
+
+    <div class="nav-menu">
+      <a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
+      <a href="personnages.html">les<span>personnages</span></a>
+      <a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
+      <a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
+      <a href="bibliographie.html">bibliographie</a>
+      <a href="making-off.html">making of</a>
+      <a href="contact.html">contact</a>
+    </div>
+  </nav>
 </header>
+
 <main>
-<div class='\"lieu-wrapper\"'>
-<h1 class="lieu-title">Les îles d’Aran</h1>
-<div class="map-full"><img alt="Carte : Aran" src="images/cartes/aran.jpg"/></div>
-</div>
+
+  <div class="lieu-wrapper">
+    <h1 class="lieu-title">Les îles d’Aran</h1>
+    <div class="map-full">
+      <img src="images/cartes/aran.jpg" alt="Carte : Aran">
+    </div>
+  </div>
+
+  <section class="lieu-content">
+
+    <h2>Saint Enda (Éanna) et la fondation d’Aran</h2>
+
+    <p>
+      Au VIᵉ siècle, la tradition situe à <em>Cill Éinne</em> (Killeany), sur <em>Inis Mór</em>, l’établissement monastique fondé par Éanna,
+      plus connu sous le nom de <strong>saint Enda</strong>. Enda est considéré par les récits hagiographiques comme l’un des pères du monachisme irlandais :
+      un modèle d’ascèse insulaire où la communauté se structure dans un paysage de pierre, exposé au vent et à la mer.
+    </p>
+
+    <p>
+      Les vestiges visibles aujourd’hui sont postérieurs et témoignent de remaniements médiévaux, mais la mémoire locale fixe sur Enda l’origine d’un idéal durable :
+      pauvreté assumée, prière, étude, travail, et un christianisme façonné par l’insularité.
+    </p>
+
+    <h2>Enda et Colum Cille : la mémoire d’une dispute</h2>
+
+    <p>
+      La tradition insulaire rapporte qu’au cours d’un séjour à Aran, <strong>Colum Cille</strong> (Columcille) se serait heurté à Enda.
+      Les récits varient selon les versions, mais évoquent un désaccord — non pas doctrinal, mais spirituel : question d’autorité, de discipline,
+      ou d’orientation de la vie monastique.
+    </p>
+
+    <p>
+      Aran représentait un modèle d’ascèse rigoureuse, presque immobile, tourné vers la contemplation et l’enracinement. Colum Cille, plus jeune,
+      portait déjà en lui une vocation de rayonnement. La tradition veut qu’Enda, attaché à l’équilibre de sa communauté, ait refusé certaines
+      initiatives de son disciple. Vexé, Colum Cille aurait alors quitté l’île.
+    </p>
+
+    <h2>Le manteau, la chute et le départ sur pierre flottante</h2>
+
+    <p>
+      Une version développée de cet épisode insiste sur l’arrière-plan politique : Colum Cille, né dans un clan princier (les O’Neill), ne pouvait être perçu
+      comme un simple novice. Lorsqu’il demande à rester, il étend son manteau au sol pour signifier la modestie de ses besoins : une terre à peine plus large
+      que l’étoffe, afin d’y bâtir un simple <em>clochán</em>, une cellule de pierre. Mais le manteau se met à s’étendre, couvrant bientôt une surface
+      de plus en plus vaste — image d’une influence qui ne saurait rester contenue.
+    </p>
+
+    <p>
+      Dans un accès de colère, Enda arrache le manteau, le roule et le repousse contre la poitrine de Colum Cille. Celui-ci chute d’une petite falaise
+      et s’écrase sur les rochers en contrebas. La tradition affirme que ces rochers porteraient encore l’empreinte de ses côtes, tandis qu’un lieu-dit voisin
+      garderait la mémoire de la scène.
+    </p>
+
+    <p>
+      Contraint de quitter l’île, Colum Cille se retrouve sans embarcation : la barque qui l’avait amené à Inis Mór est déjà repartie.
+      Il s’assoit alors sur un rocher dans la baie et attend la marée montante. Lorsque l’eau s’élève, le rocher se met à flotter et l’emporte au large.
+      Ainsi s’éloigne-t-il d’Aran, porté par la pierre elle-même.
+    </p>
+
+    <h2>Le « bateau de pierre » et les malédictions</h2>
+
+    <p>
+      La tradition ajoute qu’il était furieux. En se retournant vers l’île, il aurait prononcé trois malédictions : qu’Aran ne possède pas de terre pour ensevelir
+      ses morts ; qu’elle ne dispose d’aucun combustible, ni tourbe ni bois ; et qu’elle soit toujours gouvernée par des étrangers.
+    </p>
+
+    <p>
+      Le <em>Bád na Naomh</em> — le « bateau des saints » — serait encore visible sur les rochers à l’extrémité nord de la piste d’atterrissage d’Inis Mór.
+      Qu’il s’agisse d’une formation naturelle investie par la mémoire collective ou d’un repère ancien, le paysage conserve ainsi la trace d’un départ devenu fondateur.
+    </p>
+
+    <h2>Un motif hagiographique partagé : d’Aran à Maodez</h2>
+
+    <p>
+      Le départ sur une pierre flottante n’est pas un simple détail pittoresque. Dans l’hagiographie des îles atlantiques, la pierre devient parfois navire :
+      dalle, auge, bloc rocheux. Le prodige dit moins une prouesse physique qu’une vérité symbolique : la nature elle-même se met au service d’une mission.
+    </p>
+
+    <p>
+      Le parallèle avec la tradition bretonne de <strong>Maodez</strong> est frappant : là encore, le saint aborde une île sur une <strong>auge de pierre</strong>.
+      D’Aran à la Bretagne, la même image circule : la mer sépare, la pierre transporte, l’île consacre.
+    </p>
+
+    <p class="note-source">
+      <strong>Source (récit développé)</strong> : Dara Molloy, <em>Tour and Pilgrim Guide, Inis Mór, Aran Islands</em>, 26 janvier 2012.
+      (Je te propose de mettre le récit complet + traduction sur une page dédiée, par exemple
+      <a href="sources-aran-columcille.html">sources-aran-columcille.html</a>.)
+    </p>
+
+  </section>
+
 </main>
+
 <footer class="site-footer">
-<div class="footer-inner">
-<div class="footer-left">
-<button class="like-btn">❤</button>
-<div class="social-icons">
-<!-- LinkedIn -->
-<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank" title="LinkedIn">
-<svg aria-hidden="true" viewbox="0 0 24 24">
-<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
-</svg>
-</a>
-<!-- X -->
-<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank" title="X">
-<svg aria-hidden="true" viewbox="0 0 24 24">
-<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
-</svg>
-</a>
-<!-- Facebook -->
-<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank" title="Facebook">
-<svg aria-hidden="true" viewbox="0 0 24 24">
-<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
-</svg>
-</a>
-</div>
-</div>
-<div class="footer-right">
-<a class="buy-btn" href="achat.html">Acheter le livre</a>
-</div>
-</div>
+  <div class="footer-inner">
+    <div class="footer-left">
+      <button class="like-btn">❤</button>
+
+      <div class="social-icons">
+        <!-- LinkedIn -->
+        <a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank" title="LinkedIn">
+          <svg aria-hidden="true" viewBox="0 0 24 24">
+            <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
+          </svg>
+        </a>
+
+        <!-- X -->
+        <a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank" title="X">
+          <svg aria-hidden="true" viewBox="0 0 24 24">
+            <path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
+          </svg>
+        </a>
+
+        <!-- Facebook -->
+        <a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank" title="Facebook">
+          <svg aria-hidden="true" viewBox="0 0 24 24">
+            <path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
+          </svg>
+        </a>
+      </div>
+    </div>
+
+    <div class="footer-right">
+      <a class="buy-btn" href="achat.html">Acheter le livre</a>
+    </div>
+  </div>
 </footer>
+
 </body>
 </html>
