--- a/aran.html
+++ b/aran.html
@@ -253,9 +253,8 @@
     </p>
 
     <p class="note-source">
-      <strong>Source (récit développé)</strong> : Dara Molloy, <em>Tour and Pilgrim Guide, Inis Mór, Aran Islands</em>, 26 janvier 2012.
-      (Je te propose de mettre le récit complet + traduction sur une page dédiée, par exemple
-      <a href="sources-aran-columcille.html">sources-aran-columcille.html</a>.)
+      <strong>Source : on trouvera le récit complet dans</strong> : Dara Molloy, <em>Tour and Pilgrim Guide, Inis Mór, Aran Islands</em>, 26 janvier 2012.
+     
     </p>
 
   </section>
