--- a/aran.html
+++ b/aran.html
@@ -207,7 +207,7 @@
       initiatives de son disciple. Vexé, Colum Cille aurait alors quitté l’île.
     </p>
 
-    <h2>Le manteau, la chute et le départ sur pierre flottante</h2>
+    <h2>Le manteau, la chute et le départ sur une pierre flottante</h2>
 
     <p>
       Une version développée de cet épisode insiste sur l’arrière-plan politique : Colum Cille, né dans un clan princier (les O’Neill), ne pouvait être perçu
@@ -240,7 +240,7 @@
       Qu’il s’agisse d’une formation naturelle investie par la mémoire collective ou d’un repère ancien, le paysage conserve ainsi la trace d’un départ devenu fondateur.
     </p>
 
-    <h2>Un motif hagiographique partagé : d’Aran à Maodez</h2>
+    <h2>Un motif hagiographique partagé : de l'île d'Aran à l'île Maudez</h2>
 
     <p>
       Le départ sur une pierre flottante n’est pas un simple détail pittoresque. Dans l’hagiographie des îles atlantiques, la pierre devient parfois navire :
