--- a/aran.html
+++ b/aran.html
@@ -26,6 +26,16 @@
   <link href="css/style.css?v=20260115" rel="stylesheet"/>
 
   <style>
+    .lien-source{
+  color:#f28c28;
+  text-decoration:none;
+  font-weight:500;
+}
+
+.lien-source:hover{
+  text-decoration:underline;
+}
+    
     /* ===== Mise en page : titre + carte ===== */
     .lieu-wrapper{
       max-width:1200px;
@@ -252,10 +262,16 @@
       D’Aran à la Bretagne, la même image circule : la mer sépare, la pierre transporte, l’île consacre.
     </p>
 
-    <p class="note-source">
-      <strong>Source : on trouvera le récit complet dans</strong> : Dara Molloy, <em>Tour and Pilgrim Guide, Inis Mór, Aran Islands</em>, 26 janvier 2012.
-     
-    </p>
+   <p class="note-source">
+  <strong>Source</strong> :
+  <a href="https://www.daramolloy.com/legends.html"
+     target="_blank"
+     rel="noopener"
+     class="lien-source">
+     Tour and Pilgrim Guide, Inis Mór, Aran Islands
+  </a>,
+  Dara Molloy, 26 janvier 2012.
+</p>
 
   </section>
 
